fixed a spacing issue on cart page

--- a/src/styles/cart.scss
+++ b/src/styles/cart.scss
@@ -19,6 +19,7 @@
 
 .checkout-section {
   margin-left: 2%;
+  padding-bottom: 50px;
   .buttons {
     display: flex;
     width: 15%;
